<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <include
        android:id="@+id/top"
        layout="@layout/activity_title" />

    <RadioGroup
        android:id="@+id/tab_rdogroup"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/common_bottom_bar_selected_bg"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/tab_meeting_info"
            android:layout_height="match_parent"
            android:layout_margin="0.1dp"
            android:layout_weight="1"
            android:background="@drawable/main_bottom_item_bg"
            android:button="@null"
            android:gravity="center"
            android:text="@string/meeting_info"
            android:textSize="22sp"
            android:textColor="@color/color_radiobutton" />

        <RadioButton
            android:id="@+id/tab_meeting_yiti"
            android:layout_height="match_parent"
            android:layout_margin="0.1dp"
            android:layout_weight="1"
            android:background="@drawable/main_bottom_item_bg"
            android:button="@null"
            android:gravity="center"
             android:textSize="22sp"
              android:checked="true"
            android:text="@string/meeting_yiti"
            android:textColor="@color/color_radiobutton" />

        <RadioButton
            android:id="@+id/tab_meeting_renyuan"
            android:layout_height="match_parent"
            android:layout_margin="0.1dp"
            android:layout_weight="1"
            android:background="@drawable/main_bottom_item_bg"
            android:button="@null"
            android:gravity="center"
             android:textSize="22sp"
            android:text="@string/meeting_renyuan"
            android:textColor="@color/color_radiobutton" />
        <RadioButton
            android:id="@+id/tab_meeting_service"
            android:layout_height="match_parent"
            android:layout_margin="0.1dp"
            android:layout_weight="1"
            android:background="@drawable/main_bottom_item_bg"
            android:button="@null"
             android:textSize="22sp"
            android:gravity="center"
            android:text="@string/meeting_service"
            android:textColor="@color/color_radiobutton" />
    </RadioGroup>

    <com.wanhuiyuan.szoa.uiutil.IndexViewPager
        android:id="@+id/tab_viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tab_rdogroup"
        android:layout_below="@id/top"
        android:background="#ffffff" >
    </com.wanhuiyuan.szoa.uiutil.IndexViewPager>

    <com.wanhuiyuan.szoa.myview.RoundProgressBar
        android:id="@+id/roundProgressBar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/top"
        android:layout_marginLeft="16dp"
        android:visibility="gone" />

</RelativeLayout>