<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/label_txt"
        android:paddingTop="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#186AE8"
        android:textSize="20sp"/>

    <com.wanhuiyuan.szoa.myview.ExpandListView
        android:id="@+id/leader_list"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1dp"
        android:divider="#DDDDDD">

    </com.wanhuiyuan.szoa.myview.ExpandListView>
    
    <LinearLayout
        android:id="@+id/normal_list_layout"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:id="@+id/attend_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/attend_lab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#888888"
                    android:textSize="18sp"
                    android:text="@string/meeting_type_attend"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DDDDDD"
                    android:layout_toRightOf="@id/attend_lab"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/attend_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/txt_common"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/replace_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/replace_lab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#888888"
                    android:textSize="18sp"
                    android:text="@string/meeting_type_replace"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DDDDDD"
                    android:layout_toRightOf="@id/replace_lab"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/replace_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/txt_common"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/absence_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/absence_lab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#888888"
                    android:textSize="18sp"
                    android:text="@string/meeting_type_absence"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DDDDDD"
                    android:layout_toRightOf="@id/absence_lab"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/absence_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/txt_common"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/leave_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/leave_lab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#888888"
                    android:textSize="18sp"
                    android:text="@string/meeting_type_leave"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#DDDDDD"
                    android:layout_toRightOf="@id/leave_lab"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/leave_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/txt_common"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
