<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/activity_title" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="翻页方式："
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/myRadioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="连续翻页"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/myRadioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="横向翻页"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/myRadioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="纵向翻页"
                android:textColor="@color/black" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="IP地址："
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/ipEditText"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="@drawable/edittext_selector"
                android:hint="IP地址"
                android:text="@string/ip"
                android:digits="0123456789."  />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="端口号："
                android:textColor="@color/black"
                android:textSize="16sp" 
                />

            <EditText
                android:id="@+id/portEditText"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/edittext_selector"
                android:drawablePadding="25dp"
                android:hint="端口号"
                android:text="@string/port" 
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="项目名："
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/projectEditText"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="@drawable/edittext_selector"
                android:drawablePadding="25dp"
                android:text="@string/project" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/testBtn"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="#6caeea"
            android:onClick="login"
            android:text="连接"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/clearBtn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:background="#6caeea"
            android:onClick="login"
            android:text="清除缓存"
            android:textColor="@color/white"
            android:textSize="24sp"
             />

        <Button
            android:id="@+id/downMsgBtn"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="#6caeea"
            android:onClick="login"
            android:text="同步离线数据"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>